--- a/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
+++ b/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
@@ -1,27 +1,24 @@
-/*隐藏所有右键菜单分割线*/
-/*
-menuseparator {
-    display: none;
-}
-*/
-
-/*去除 链接存为书签*/
-#context-bookmarklink{
+/* 隐藏所有无用右键菜单 */
+#context-bookmarkpage,
+#context-bookmarklink,
+#context-savelinktopocket,
+#context-pocket,
+#context-take-screenshot,
+#context-sep-screenshots {
     display: none !important;
 }
 
-/*去除 新版变化*/
+/* 去除 新版变化 */
 #appMenu-whatsnew-button {
     display: none !important;
 }
 
-
-/*地址栏去除圆角*/
+/* 地址栏去除圆角 */
 #urlbar {
     border-radius: 0 !important;
 }
 
-/* only remove TST headers */
+/* remove TST headers */
 #sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
-    display: none; /* remove sidebar header */
+    display: none;
 }
