--- a/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
+++ b/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
@@ -18,7 +18,8 @@
     border-radius: 0 !important;
 }
 
-/* remove TST headers */
-#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
+/* remove TST/Sidebery headers */
+#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header,
+#sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"] > #sidebar-header {
     display: none;
 }
