firefox: hide FlagFox menu
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
+++ b/firefox/.mozilla/firefox/userprofile/chrome/userChrome.css
@@ -23,3 +23,7 @@
 #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"] > #sidebar-header {
     display: none;
 }
+
+menu[label="Flagfox"] {
+    display: none !important;
+}
